[gd_scene load_steps=20 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/knight/noBKG_KnightIdle_strip.png" type="Texture" id=2]
[ext_resource path="res://player/knight/noBKG_KnightRun_strip.png" type="Texture" id=3]
[ext_resource path="res://player/knight/noBKG_KnightJumpAndFall_strip.png" type="Texture" id=4]
[ext_resource path="res://player/knight/noBKG_KnightAttack_strip.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 15.808

[sub_resource type="Animation" id=3]
resource_name = "attack1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 7, 4, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack1Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack2"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack2Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack2Hitbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2.211 ), Vector2( 14.1567, -2.211 ), Vector2( 25, -2.211 ), Vector2( 25, -2.211 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteJumpAndFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteJumpAndFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteJumpAndFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 18.5918, 3.31554 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16.7878, 2.7885 )

[sub_resource type="CircleShape2D" id=12]
radius = 16.2611

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 7.82809, 10.6941 )

[sub_resource type="CircleShape2D" id=14]
radius = 4.26729

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.7925, -2.211 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.0910034, 0.85199 )
current = true

[node name="SpriteIdle" type="Sprite" parent="."]
visible = false
position = Vector2( 0.0440063, 0.794006 )
texture = ExtResource( 2 )
hframes = 15
frame = 7

[node name="SpriteRun" type="Sprite" parent="."]
visible = false
position = Vector2( 0.00396729, 0.808014 )
texture = ExtResource( 3 )
hframes = 8
frame = 7

[node name="SpriteJumpAndFall" type="Sprite" parent="."]
visible = false
position = Vector2( 0.190002, 0.955994 )
texture = ExtResource( 4 )
hframes = 14
frame = 4

[node name="SpriteAttack" type="Sprite" parent="."]
position = Vector2( 8.01102, 0.75103 )
texture = ExtResource( 5 )
hframes = 22
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 3 )
anims/attack2 = SubResource( 2 )
anims/attack3 = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/land = SubResource( 8 )
anims/run = SubResource( 9 )

[node name="Attack1Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack1Hitbox"]
position = Vector2( 13.5586, -5.0069 )
shape = SubResource( 10 )

[node name="Attack2Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack2Hitbox"]
position = Vector2( -0.790558, -17.3924 )
shape = SubResource( 11 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attack2Hitbox"]
position = Vector2( 15.0207, -2.6352 )
shape = SubResource( 12 )
disabled = true

[node name="BodyHurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyHurtbox"]
position = Vector2( 1.05409, 2.37169 )
shape = SubResource( 13 )

[node name="HeadHurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHurtbox"]
position = Vector2( 4.5098, -12.4242 )
shape = SubResource( 14 )
[connection signal="body_entered" from="Attack1Hitbox" to="." method="_on_attack1"]
[connection signal="body_entered" from="Attack2Hitbox" to="." method="_on_attack2"]
